src/objects/ChainedBatchId__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FifthBatch_Id__c</fullName>
        <label>FifthBatch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstBatch_Id__c</fullName>
        <label>FirstBatch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FourthBatch_Id__c</fullName>
        <label>FourthBatch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondBatch_Id__c</fullName>
        <label>SecondBatch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SeventhBatch_Id__c</fullName>
        <label>SeventhBatch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SixthBatch_Id__c</fullName>
        <label>SixthBatch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdBatch_Id__c</fullName>
        <label>ThirdBatch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ChainedBatchId</label>
</CustomObject>